# TextDoc-Access-Manager

./: CMakeLists.md  CMakeLists.txt  README.md  TextDocAccessManager.cpp  TextDocAccessManager.sln  TextDocAccessManager.vcxproj  TextDocAccessManager.vcxproj.filters  client.cpp  server.cpp
